# macf

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md
docs/plans/: 2026-02-28-dashboard-config-and-agent-prompt.md  2026-02-28-multi-agent-conference.md  2026-02-28-round-robin-and-auto-collapse.md  2026-03-01-config-save-and-restart.md  2026-03-01-mcp-client-tracking.md  2026-03-01-transcript-and-session-workspaces.md
examples/: api_design_conference.json
src/macf/: conference.py  main.py  mcp_server.py  models.py  transcript.py
src/macf/web/: app.py
src/macf/web/static/: index.html
src/macf2/: conference.py  file_manager.py  main.py  mcp_server.py  models.py  transcript.py
src/macf2/web/: app.py
src/macf2/web/static/: index.html
tests/: test_conference.py  test_file_manager.py  test_integration.py  test_mcp_server.py  test_models.py  test_transcript.py  test_web.py
